--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fullcalendar/react": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@mui/material": "^5.2.3"
   },
   "devDependencies": {
     "css-loader": "^4.3.0",
