--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@fullcalendar/timegrid": "^6.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@mui/material": "^5.2.3"
+    "@mui/material": "^5.0.0",
+    "@mui/icons-material": "^5.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0"
   },
   "devDependencies": {
     "css-loader": "^4.3.0",
