--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
     "firebase": "^10.14.1",
+    "mj-react-form-builder": "^0.0.39",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
