--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "deploy": "git add . && git commit -m \"Deploying the app\" || echo 'No changes to commit' && npm run build && npm version patch -m \"Bump version to %s\" && git push && git push --tags && firebase deploy",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -39,17 +40,15 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "html-webpack-plugin": "^4.5.0",
     "postcss": "^8.4.47",
-    "style-loader": "^2.0.0",
     "tailwindcss": "^3.4.13",
-    "ts-loader": "^8.0.7",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "vite": "^5.4.8",
-    "webpack": "^5.3.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "prettier": "^3.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0"
   },
   "packageManager": "yarn@1.22.22"
 }
